force-app/main/default/objects/ESS_LC1_Scope__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <formula>Owner:User.FirstName_EN__c + &apos; &apos; + Owner:User.LastName_EN__c</formula>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JE_Score__c</fullName>
        <label>JE Score</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Detail__c</fullName>
        <label>Job Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Updated_By__c</fullName>
        <formula>LastModifiedBy.FirstName_EN__c + &apos; &apos; +  LastModifiedBy.LastName_EN__c</formula>
        <label>Last Updated By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Output_Required__c</fullName>
        <label>Output Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Physical_Requirement__c</fullName>
        <label>Physical Requirement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Location__c</fullName>
        <label>Work Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bangkok</fullName>
                    <label>กรุงเทพ</label>
                </value>
                <value>
                    <fullName>Sriracha</fullName>
                    <label>ศรีราชา</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>i-Link+ LC1 Scope</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Job_Title__c</columns>
        <columns>JE_Score__c</columns>
        <columns>Unit__c</columns>
        <columns>Section__c</columns>
        <columns>Department__c</columns>
        <columns>Function__c</columns>
        <columns>Work_Location__c</columns>
        <columns>Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LC-{0000}</displayFormat>
        <label>Scope of Service ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>